# ai-research

./: .gitignore  README.md
notebooks/: pyproject.toml  requirements.txt
notebooks/from-scratch/: download_unpack_watermar_pita.py  resnet.ipynb  transformer.ipynb
