[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Arnaud Baradat <arnaud.baradat@epita.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
ipykernel = "^6.29.3"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
